@@ -1,3 +1,11 @@
+2008-05-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/gui/gui.cpp: deal with string issues in version 2.6
+	of wxwidgets
+
+	* src/modules/CMakeLists.txt: inaccurate path if YARP 
+	compiled with an out-of-source build.
+
 2008-04-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* conf/PackageInfo.cmake: factor out packaging verbiage.
